feat: Guacamole support, LDAP server without TLS
