# docs/api/swagger.yaml
@@ -10,6 +10,10 @@ definitions:
         type: string
       gid:
         type: integer
+      guac_config_parameters:
+        type: string
+      guac_config_protocol:
+        type: string
       members:
         items:
           $ref: '#/definitions/models.UserInfo'
@@ -25,6 +29,10 @@ definitions:
   models.JSONGroupBody:
     properties:
       description:
+        type: string
+      guac_config_parameters:
+        type: string
+      guac_config_protocol:
         type: string
       members:
         type: string
@@ -109,6 +117,11 @@ definitions:
     properties:
       message:
         type: string
+    type: object
+  types.GuacamoleSupport:
+    properties:
+      guac_enabled:
+        type: boolean
     type: object
   types.LoginBody:
     properties:
@@ -476,6 +489,27 @@ paths:
       summary: Add members to a group
       tags:
       - groups
+  /guacamole:
+    get:
+      description: Get a boolean showing if Apache Guacamole support is enabled
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.GuacamoleSupport'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+      summary: Check if Apache Guacamole support is enabled
+      tags:
+      - authentication
   /login:
     post:
       consumes:
